EWL-6633: adds rules in order to fix search icon on IE

--- a/styleguide/source/assets/scss/01-atoms/_search-field.scss
+++ b/styleguide/source/assets/scss/01-atoms/_search-field.scss
@@ -35,9 +35,9 @@
     @extend .icon--search;
     background-color: transparent;
     background-size: 25px 30px;
-    background-position: 0 0;
-    width: 25px;
-    height: 30px;
+    background-position: center;
+    width: 25px !important;
+    height: 30px !important;
     padding: 0;
     margin: 0;
     min-height: 30px;
